--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PROFILES
 spring.profiles.active=@activatedProperties@
-#spring.profiles.active=dev
+spring.profiles.active=IAmDev
 
 # ----------------------------------------
 # WEB PROPERTIES
@@ -60,7 +60,7 @@ ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/
 #### Specific day 1 of month   = * 0 0 1 * ? *
 #### day Test 2 m =0 0/2 * 1/1 * ? *
 system.unworking.job.cronExpressions=0 0/2 * 1/1 * ? *
-license.list.job.cronExpressions=0 0/1 * 1/1 * ? *
+license.list.job.cronExpressions=0 0 0 1 1/1 ? *
 
 ws.excise.system-id=WSS
 ws.excise.ip-address=192.168.160.67
