--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PROFILES
 #spring.profiles.active=@activatedProperties@
-spring.profiles.active=IAmDev
+#spring.profiles.active=IAmDev
 
 # ----------------------------------------
 # WEB PROPERTIES
@@ -23,9 +23,9 @@ server.servlet.context-path=/excise-backend
 #spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
-spring.datasource.username=exciseuser
-spring.datasource.password=exciseuser
+spring.datasource.url=jdbc:p6spy:oracle:thin:@baiwadev.thddns.net:9441:orcl
+spring.datasource.username=exciseOffice
+spring.datasource.password=exciseOffice
 
 # WEB SERVICES
 # Master Data
