--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -20,12 +20,15 @@ server.servlet.context-path=/excise-backend
 #spring.datasource.password=exciseadm
 
 # DATASOURCE - Baiwa Server
-#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@baiwadev.thddns.net:9441:orcl
-spring.datasource.username=exciseOffice
-spring.datasource.password=exciseOffice
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
+spring.datasource.username=exciseuser
+spring.datasource.password=exciseuser
+
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@baiwadev.thddns.net:9441:orcl
+#spring.datasource.username=exciseOffice
+#spring.datasource.password=exciseOffice
 
 # WEB SERVICES
 # Master Data
